--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "bundle/vim-webostv-dev"]
 	path = bundle/vim-webostv-dev
 	url = http://mod.lge.com/hub/tv_scm_tool/vim-webostv-dev.git
+[submodule "bundle/YouCompleteMe"]
+	path = bundle/YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe.git
